# LudasComposer

./: .dockerignore  .env.example  .gitignore  CODE_REVIEW.md  Cargo.toml  Dockerfile  README.md  ars.md  docker-compose.dev.yaml  docker-compose.yaml  docker-compose.yml  env-cli.config.ts  ludus.md  mkdocs.yml  package-lock.json  package.json  plan.md  platforms.md  secrets.toml.example
.claude/: agent-team.json
.claude/agents/: integration-test.md
.claude/commands/: agent-backend.md  agent-codegen.md  agent-data-organizer.md  agent-frontend.md  agent-resource.md  ci-check.md  generate-code.md  integration_test.md  review-codedesign.md  team-implement.md  test-code.md
.claude/skills/: dev-rules.md  integration-test.md
.github/workflows/: build-and-deploy.yml  ci.yml  deploy-web.yml  docker-publish.yml  integration-test.yml  pages.yml  release-app.yml  update-web-version.yml
ars-codegen/: package-lock.json  package.json
ars-codegen/src/: index.ts  project-loader.ts  prompt-generator.ts  session-runner.ts  types.ts
ars-editor/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
ars-editor/src/: App.tsx  AppLayout.tsx  index.css  main.tsx  routes.tsx
ars-editor/src-tauri/: .env.example  Cargo.toml  build.rs  tauri.conf.json
ars-editor/src-tauri/src/: app_state.rs  auth.rs  cernere_auth.rs  cernere_client.rs  collab.rs  dynamo.rs  dynamo_repo.rs  git_ops.rs  lib.rs  redis_client.rs  surreal_repo.rs  surrealdb_client.rs  web_main.rs  web_server.rs
ars-editor/src-tauri/src/commands/: asset.rs  mod.rs  project.rs
ars-editor/src-tauri/src/models/: actor.rs  component.rs  mod.rs  scene.rs
ars-editor/src-tauri/src/web_modules/: asset.rs  editor.rs  mod.rs  module_manager.rs  setup.rs
crates/ars-asset-importer/: Cargo.toml
crates/ars-asset-importer/src/: hull.rs  hull_writer.rs  lib.rs  obb.rs  pipeline.rs  schema.rs
crates/ars-asset-importer/test-fixtures/: .gitattributes
crates/ars-asset-importer/test-fixtures/data/bb5a6656fad80121/: meta.toml  proxy.glb
crates/ars-asset-importer/test-fixtures/source/: tetra.glb
crates/ars-asset-importer/tests/: pipeline_test.rs
crates/ars-codegen/: Cargo.toml
crates/ars-codegen/src/: bridge.rs  code_layout.rs  codedesign_parser.rs  crc32.rs  feedback.rs  lib.rs  main.rs  manifest.rs  project_loader.rs  prompt_generator.rs  session_runner.rs
crates/ars-core/: Cargo.toml
crates/ars-core/src/: event.rs  event_bus.rs  lib.rs  module.rs  repository.rs
crates/ars-core/src/events/: assembly.rs  auth.rs  data.rs  mod.rs  project.rs  resource.rs  scene.rs
crates/ars-core/src/models/: auth.rs  data.rs  mod.rs  project.rs
crates/ars-data-organizer/: Cargo.toml
crates/ars-data-organizer/src/: import.rs  lib.rs  use_cases.rs  validation.rs
crates/ars-game-lexicon/: Cargo.toml  README.md
crates/ars-game-lexicon/src/: domain.rs  error.rs  lib.rs  loader.rs  repository.rs
crates/ars-secrets/: Cargo.toml
crates/ars-secrets/src/: cache.rs  client.rs  config.rs  error.rs  lib.rs  profile.rs  ssm_client.rs
data-organizer/: Cargo.toml  Dockerfile
data-organizer/src/: blackboard.rs  error.rs  lib.rs  master_data.rs  organizer.rs  schema.rs  user_data.rs  web_main.rs  web_server.rs
docs/: build-instance-design.md  native-build-module-design.md  setup-linux-arm64.md  spa-conversion-design.md
docs/modules/: detail.md  overview.md
infra/build-instance/: build.sh  deploy.sh  setup-build-instance.sh  setup-iam.sh
mcp-server/: package.json
mcp-server/src/: index.ts  module-parser.ts
melpomene/src-tauri/: Cargo.toml
melpomene/src-tauri/src/: lib.rs  main.rs  web_main.rs  web_server.rs
melpomene/src-tauri/src/commands/: config.rs  issues.rs  milestones.rs  mod.rs  notifications.rs
melpomene/src-tauri/src/models/: config.rs  github.rs  milestone.rs  mod.rs  ticket.rs
melpomene/src-tauri/src/services/: cache.rs  github_client.rs  mod.rs  notification.rs
profiles/: local.toml.example  organization.toml.example
resource-depot/: Dockerfile
resource-depot/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
resource-depot/src-tauri/src/: lib.rs  main.rs  web_main.rs  web_server.rs
resource-depot/src-tauri/src/commands/: depot.rs  export.rs  mod.rs  naming.rs
resource-depot/src-tauri/src/models/: export.rs  mod.rs  naming.rs  resource.rs
resource-depot/src-tauri/src/services/: depot.rs  export.rs  mod.rs  naming.rs
review/: 2026-03-20-code-review.md
scripts/: dev-bg.mjs
spec/: env-setup.md  game-feature-coverage.md  index.md  plan.md  setup-windows.md
spec/ergo/: INDEX.md  combo_counter.md  health.md  infrastructure.md  integration.md  roadmap.md  score.md  timing_judge.md
spec/game-lexicon/: README.md
spec/game-template/: README.md  action.md  deckbuilder_roguelike.md  fighting.md  fps.md  hack_and_slash.md  moba.md  open_world.md  platformer.md  strategy_4x.md
spec/modules/: detail.md  game-lexicon.md  overview.md
spec/review/: 2026-03-23-code-review.md  2026-03-30-build-optimization.md  2026-03-30-package-migration-plan.md
spec/rule/: code-generation-rules.md  domain-rules.md  (+6 more)
src-tauri/: .gitignore  Cargo.toml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: assembly.rs  mod.rs  module_registry.rs  resource_depot.rs
src-tauri/src/models/: assembly.rs  lookdev_config.rs  mod.rs  module_definition.rs  resource_depot.rs
src-tauri/src/services/: assembly_manager.rs  git_clone.rs  mod.rs  module_parser.rs  module_registry.rs  resource_depot.rs
terpsichore/src-tauri/: Cargo.toml
terpsichore/src-tauri/src/: lib.rs  main.rs  server_main.rs
terpsichore/src-tauri/src/commands/: server.rs
terpsichore/src-tauri/src/models/: command.rs  config.rs  mod.rs
terpsichore/src-tauri/src/services/: command_bridge.rs  command_server.rs  mod.rs
thaleia/src-tauri/: Cargo.toml
thaleia/src-tauri/src/: lib.rs  main.rs  web_main.rs  web_server.rs
thaleia/src-tauri/src/commands/: documents.rs
thaleia/src-tauri/src/models/: document.rs  file_tree.rs  mod.rs
thaleia/src-tauri/src/services/: document_browser.rs  mod.rs  renderer.rs
(+506 files in other folders)
