[workspace]
resolver = "2"
members = [
    "crates/ars-core",
    "crates/ars-project",
    "crates/ars-secrets",
    "crates/ars-codegen",
    "crates/ars-mcp-server",
    "crates/ars-data-organizer",
    "crates/ars-asset-importer",
    "crates/ars-game-lexicon",
    "ars-editor/src-tauri",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = { version = "10", features = ["serde-compat", "serde-json-impl"] }
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }
async-trait = "0.1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
regex-lite = "0.1"
