[package]
name = "app"
version = "0.1.0"
description = "Ars - コンテンツ生成ゲームエンジン & エディタ"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", optional = true }

[features]
default = ["tauri-app"]
tauri-app = ["dep:tauri", "dep:tauri-plugin-log", "dep:tauri-build", "dep:ars-asset-importer"]
web-server = [
    "dep:axum",
    "dep:tokio",
    "dep:tower-http",
    "dep:reqwest",
    "dep:uuid",
    "dep:chrono",
    "dep:tower",
    "dep:axum-extra",
    "dep:time",
    "dep:urlencoding",
    "dep:git2",
    "dep:dirs",
    "dep:futures",
    "dep:dashmap",
]

[[bin]]
name = "app"
path = "src/main.rs"
required-features = ["tauri-app"]

[[bin]]
name = "ars-web-server"
path = "src/web_main.rs"
required-features = ["web-server"]

[dependencies]
# Ars core crates
ars-core = { path = "../../crates/ars-core" }
ars-codegen = { path = "../../crates/ars-codegen" }
ars-secrets = { path = "../../crates/ars-secrets" }
ars-project = { path = "../../crates/ars-project" }
ars-asset-importer = { path = "../../crates/ars-asset-importer", optional = true }
# ars-secrets: removed — secrets management moved to Cernere server
# Common
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
async-trait = "0.1"
toml = "0.8"
tauri = { version = "2.10.3", optional = true }
tauri-plugin-log = { version = "2", optional = true }
dirs-next = "2.0"
axum = { version = "0.7", features = ["ws"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower-http = { version = "0.5", features = ["cors", "fs"], optional = true }
# HTTP client & Auth (Cernere proxy)
reqwest = { version = "0.12", features = ["json"], optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
tower = { version = "0.5", features = ["util"], optional = true }
axum-extra = { version = "0.9", features = ["cookie"], optional = true }
time = { version = "0.3", optional = true }
urlencoding = { version = "2", optional = true }
# Git operations
git2 = { version = "0.20", optional = true }
dirs = { version = "6", optional = true }
# Collaboration (WebSocket + shared state)
futures = { version = "0.3", optional = true }
dashmap = { version = "6", optional = true }
# Redis: removed — session management moved to Cernere server

[dev-dependencies]
tempfile = "3"
