[package]
name = "ars-asset-importer"
version = "0.1.0"
edition = "2021"
description = "Ars asset import pipeline: Tier 1 proxy generation (mesh/AABB/OBB/hull/thumbnail)"

[dependencies]
ars-core = { path = "../ars-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
gltf = { version = "1.4", default-features = false, features = ["import", "utils", "names"] }
glam = { version = "0.29", features = ["serde"] }
blake3 = "1"
toml = "0.8"
meshopt = "0.6"
byteorder = "1"
chull = "0.2"

[[bin]]
name = "ars-import"
path = "src/bin/ars-import.rs"

[[bin]]
name = "gen-fixture"
path = "src/bin/gen-fixture.rs"

[dev-dependencies]
tempfile = "3"
