[package]
name = "ars-core"
version = "0.1.0"
edition = "2021"
description = "Ars core domain models and repository traits"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }
