[package]
name = "ars-data-organizer"
version = "0.1.0"
edition = "2021"
description = "Ars data management: schema, master data, user data, import"

[dependencies]
ars-core = { path = "../ars-core" }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
regex-lite = { workspace = true }
calamine = "0.34"
csv = "1"

[dev-dependencies]
tokio = { workspace = true }
