[package]
name = "melpomene"
version = "0.1.0"
description = "Melpomene - GitHub Issues & Notification Management for Ars"
edition = "2021"

[features]
default = ["tauri-app"]
tauri-app = ["dep:tauri", "dep:tauri-build"]
web-server = [
    "dep:axum",
    "dep:tower-http",
]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
dirs = "6"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
# Tauri (optional)
tauri = { version = "2", optional = true }
# Web server (optional)
axum = { version = "0.7", optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }

[[bin]]
name = "melpomene-app"
path = "src/main.rs"
required-features = ["tauri-app"]

[[bin]]
name = "melpomene-web"
path = "src/web_main.rs"
required-features = ["web-server"]

[lib]
name = "melpomene_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }
