[package]
name = "resource-depot"
version = "0.1.0"
description = "Ars Resource Depot - リソース管理ツール"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["drag-drop"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
dirs = "6"
walkdir = "2"
sha2 = "0.10"
regex = "1"

[lib]
name = "resource_depot_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
