[package]
name = "terpsichore"
version = "0.1.0"
description = "Terpsichore - Command Server & External Tool Integration for Ars"
edition = "2021"

[features]
default = ["tauri-app"]
tauri-app = ["dep:tauri", "dep:tauri-build"]
web-server = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
dirs = "6"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
# Tauri (optional)
tauri = { version = "2", optional = true }

[[bin]]
name = "terpsichore-app"
path = "src/main.rs"
required-features = ["tauri-app"]

[[bin]]
name = "terpsichore-server"
path = "src/server_main.rs"

[lib]
name = "terpsichore_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }
