[package]
name = "thaleia"
version = "0.1.0"
description = "Thaleia - Markdown Documentation Renderer & Browser for Ars"
edition = "2021"

[features]
default = ["tauri-app"]
tauri-app = ["dep:tauri", "dep:tauri-build"]
web-server = [
    "dep:axum",
    "dep:tower-http",
]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
dirs = "6"
walkdir = "2"
regex = "1"
pulldown-cmark = "0.12"
# Tauri (optional)
tauri = { version = "2", optional = true }
# Web server (optional)
axum = { version = "0.7", optional = true }
tower-http = { version = "0.5", features = ["cors", "fs"], optional = true }

[[bin]]
name = "thaleia-app"
path = "src/main.rs"
required-features = ["tauri-app"]

[[bin]]
name = "thaleia-web"
path = "src/web_main.rs"
required-features = ["web-server"]

[lib]
name = "thaleia_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }
